# barbaros

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  barbaros.desktop  build.sh  build_flatpak.md  main.py  pyproject.toml  test_keybind.py  test_qt_tray_app.py  test_xlib.py  translation_agent_prompt.txt
.github/workflows/: flatpak.yml  flatpak.yml.off
.hermes/plans/: 2026-05-04_090200-provider-model-tree-combobox.md
docs/: README_RU.md  build_flatpak.md
flatpak/: barbaros.yaml  com.github.frimn.barbaros.desktop  io.github.frimn.barbaros.desktop  io.github.frimn.barbaros.metainfo.xml
src/barbaros/: about_window.py  common.py  ipc.py  main.py  main_old.py  main_window.py  model_manager.py  resources_loader.py  security.py  signal_handling_app.py  translator.py  workers.py
src/barbaros/features/: base.py  ocr.py  settings.py  text.py
src/barbaros/resources/: dictionary_agent_prompt.md  ocr_agent_prompt.md  translation_agent_prompt.md
src/barbaros/widgets/: custom_text_edit.py  filterable_combobox.py  image_crop.py  image_manager.py  link_label.py  progress_label.py  provider_dialog.py  providers_card.py  screen_capture.py
tests/: test_common.py
