[project]
name = "barbaros"
version = "0.1.0"
description = "AI Translation app"
readme = "README.md"
authors = [{ name = "Nik Volkov", email = "freezemandix@ya.ru" }]
requires-python = ">=3.10"
dependencies = ["ollama", "pyside6"]

[project.scripts]
barbaros = "barbaros.main:main"
# pyside6-genpyi = "pyside6-genpyi –feature='snake_case'"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
