# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml

[project]
name = "barbaros"
description = "AI Translation app"
keywords = ["AI", "Translation"]
readme = "README.md"
authors = [{ name = "Nik Volkov", email = "freezemandix@ya.ru" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["ollama", "pyside6", "psutil"]

# [project.scripts]
# barbaros = "barbaros.main:main"
# pyside6-genpyi = "pyside6-genpyi –feature='snake_case'"

[project.gui-scripts]
barbaros = "barbaros.main:main"

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/FRiMN/barbaros"
Issues = "https://github.com/FRiMN/barbaros/issues"

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/barbaros/__version__.py"

[tool.setuptools.data-files]
"share/applications" = ["flatpak/io.github.frimn.barbaros.desktop"]
"share/icons/hicolor/256x256/apps" = ["src/barbaros/resources/icons/icon3.png"]
